fixed few spacing and class

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1118,6 +1118,7 @@ textarea {
 
 .cs_fs_22 {
   font-size: 22px;
+  line-height: 1.45em;
 }
 
 .cs_fs_24 {
@@ -1321,7 +1322,7 @@ hr {
   color: #573cff;
 }
 
-.cs_section_header {
+.cs_section_heading {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1336,20 +1337,17 @@ hr {
   row-gap: 30px;
 }
 
-.cs_section_heading .cs_section_subtitle {
+.cs_section_heading_in.cs_style_1 .cs_section_subtitle {
   display: block;
   line-height: 1.556em;
   letter-spacing: 2.7px;
   text-transform: uppercase;
   margin-bottom: 15px;
 }
-.cs_section_heading .cs_section_title {
-  line-height: 1.21em;
-}
 
 .cs_star_container i {
   font-size: 12px;
-  color: #FFC107;
+  color: #ffc107;
 }
 
 /*--------------------------------------------------------------
@@ -1673,7 +1671,7 @@ hr {
 ----------------------------------------------------------------*/
 .cs_hero_inner {
   width: 100%;
-  min-height: 960px;
+  height: 900px;
   position: relative;
 }
 
@@ -1721,7 +1719,7 @@ hr {
   gap: 12px;
 }
 .cs_hero_text .cs_star_container {
-  color: #FFC107;
+  color: #ffc107;
 }
 .cs_hero_text .cs_rating_text {
   line-height: 1.459em;
@@ -1742,33 +1740,22 @@ hr {
   row-gap: 30px;
 }
 
-.cs_course_item {
+.cs_course.cs_style_1 {
   width: 100%;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
-.cs_course_item:hover {
-  -webkit-box-shadow: 0px 0px 45px 0px rgba(0, 0, 0, 0.1);
-          box-shadow: 0px 0px 45px 0px rgba(0, 0, 0, 0.1);
-}
-.cs_course_item:hover .cs_sourse_badge {
-  background-color: #573cff;
-  color: #fff;
-}
-
-.cs_course_thumb {
-  margin-bottom: 18px;
+.cs_course.cs_style_1 .cs_course_thumb {
   position: relative;
 }
-.cs_course_thumb img {
+.cs_course.cs_style_1 .cs_course_thumb img {
   display: block;
   width: 100%;
   height: 100%;
   -o-object-fit: cover;
      object-fit: cover;
 }
-
-.cs_badge_container {
+.cs_course.cs_style_1 .cs_badge_container {
   width: calc(100% - 30px);
   display: -webkit-box;
   display: -ms-flexbox;
@@ -1783,34 +1770,30 @@ hr {
   left: 15px;
   top: 15px;
 }
-
-.cs_sourse_badge {
+.cs_course.cs_style_1 .cs_sourse_badge {
   padding: 3px 16px;
   border-radius: 2px;
   -webkit-transition: all 0.4s ease-in-out;
   transition: all 0.4s ease-in-out;
 }
-
-.cs_course_cart {
+.cs_course.cs_style_1 .cs_course_cart {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
   gap: 10px;
 }
-
-.cs_course_info {
-  padding: 0 20px 20px;
+.cs_course.cs_style_1 .cs_course_info {
+  padding: 18px 20px 26px;
 }
-.cs_course_info .cs_separator {
+.cs_course.cs_style_1 .cs_separator {
   width: 100%;
   max-width: 363px;
   height: 1px;
-  background: #E9E9E9;
-  margin-top: 23px;
-  margin-bottom: 13px;
+  background: #e9e9e9;
+  margin-top: 25px;
+  margin-bottom: 20px;
 }
-
-.cs_course_meta {
+.cs_course.cs_style_1 .cs_course_meta {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1822,7 +1805,7 @@ hr {
           justify-content: space-between;
   margin-bottom: 18px;
 }
-.cs_course_meta span {
+.cs_course.cs_style_1 .cs_course_meta span {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1831,15 +1814,10 @@ hr {
           align-items: center;
   gap: 10px;
 }
-
-.cs_course_title {
-  font-size: 22px;
-  font-weight: 500;
-  line-height: 32px;
+.cs_course.cs_style_1 .cs_course_title {
   margin-bottom: 20px;
 }
-
-.cs_course_instructor {
+.cs_course.cs_style_1 .cs_course_instructor {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1850,8 +1828,7 @@ hr {
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
-
-.cs_instructor_info {
+.cs_course.cs_style_1 .cs_instructor_info {
   display: -webkit-box;
   display: -ms-flexbox;
   display: flex;
@@ -1860,7 +1837,14 @@ hr {
           align-items: center;
   gap: 10px;
 }
-
-.cs_reviews_number {
+.cs_course.cs_style_1 .cs_reviews_number {
   margin-left: 10px;
 }
+.cs_course.cs_style_1:hover {
+  -webkit-box-shadow: 0px 0px 45px 0px rgba(0, 0, 0, 0.1);
+          box-shadow: 0px 0px 45px 0px rgba(0, 0, 0, 0.1);
+}
+.cs_course.cs_style_1:hover .cs_sourse_badge {
+  background-color: #573cff;
+  color: #fff;
+}/*# sourceMappingURL=style.css.map */
