--- a/assets/sass/shortcode/_course.scss
+++ b/assets/sass/shortcode/_course.scss
@@ -1,96 +1,90 @@
-.cs_course_item {
+.cs_course.cs_style_1 {
   width: 100%;
-  transition: all .4s ease-in-out;
+  transition: all 0.4s ease-in-out;
+
+  .cs_course_thumb {
+    position: relative;
+
+    img {
+      display: block;
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+  }
+
+  .cs_badge_container {
+    width: calc(100% - 30px);
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    position: absolute;
+    left: 15px;
+    top: 15px;
+  }
+
+  .cs_sourse_badge {
+    padding: 3px 16px;
+    border-radius: 2px;
+    transition: all 0.4s ease-in-out;
+  }
+
+  .cs_course_cart {
+    display: flex;
+    gap: 10px;
+  }
+
+  .cs_course_info {
+    padding: 18px 20px 26px;
+  }
+  .cs_separator {
+    width: 100%;
+    max-width: 363px;
+    height: 1px;
+    background: #e9e9e9;
+    margin-top: 25px;
+    margin-bottom: 20px;
+  }
+
+  .cs_course_meta {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+    margin-bottom: 18px;
+
+    span {
+      display: flex;
+      align-items: center;
+      gap: 10px;
+    }
+  }
+
+  .cs_course_title {
+    margin-bottom: 20px;
+  }
+
+  .cs_course_instructor {
+    display: flex;
+    align-items: center;
+    justify-content: space-between;
+  }
+
+  .cs_instructor_info {
+    display: flex;
+    align-items: center;
+    gap: 10px;
+  }
+
+  .cs_reviews_number {
+    margin-left: 10px;
+  }
 
   &:hover {
-    box-shadow: 0px 0px 45px 0px rgba(0, 0, 0, 0.10);
+    box-shadow: 0px 0px 45px 0px rgba(0, 0, 0, 0.1);
 
     .cs_sourse_badge {
       background-color: $accent;
       color: $white;
     }
   }
-}
-
-.cs_course_thumb {
-  margin-bottom: 18px;
-  position: relative;
-
-  img {
-    display: block;
-    width: 100%;
-    height: 100%;
-    object-fit: cover;
-  }
-
-}
-
-.cs_badge_container {
-  width: calc(100% - 30px);
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  position: absolute;
-  left: 15px;
-  top: 15px;
-}
-
-.cs_sourse_badge {
-  padding: 3px 16px;
-  border-radius: 2px;
-  transition: all .4s ease-in-out;
-}
-
-.cs_course_cart {
-  display: flex;
-  gap: 10px;
-}
-
-.cs_course_info {
-  padding: 0 20px 20px;
-
-  .cs_separator {
-    width: 100%;
-    max-width: 363px;
-    height: 1px;
-    background: #E9E9E9;
-    margin-top: 23px;
-    margin-bottom: 13px;
-  }
-}
-
-.cs_course_meta {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-  margin-bottom: 18px;
-
-  span {
-    display: flex;
-    align-items: center;
-    gap: 10px;
-  }
-}
-
-.cs_course_title {
-  font-size: 22px;
-  font-weight: 500;
-  line-height: 32px;
-  margin-bottom: 20px;
-}
-
-.cs_course_instructor {
-  display: flex;
-  align-items: center;
-  justify-content: space-between;
-}
-
-.cs_instructor_info {
-  display: flex;
-  align-items: center;
-  gap: 10px;
-}
-
-.cs_reviews_number {
-  margin-left: 10px;
 }
